💄 fixed spacing between elements, changed colors, enhanced overall looks

--- a/public/styles/colors.css
+++ b/public/styles/colors.css
@@ -12,4 +12,8 @@
     --neutral-black: #100F1E;
     --neutral-white: #FFFFFF;
     --neutral-gray: #DBDBDB;
+
+    --ui-green: #66D256; 
+    --ui-green-2: #235F1C; 
+
 }
