--- a/public/styles/participants.css
+++ b/public/styles/participants.css
@@ -41,18 +41,12 @@ input {
 }
 
 #pagination button {
-    border-radius: 4px;
-    border: 2px solid #F3F0FD;
-    padding: 4px 8px;
+    border-radius: 1px;
+    border: 1px solid #F3F0FD;
+    padding: .5rem 1rem;
     background: var(--neutral-white);
     color: var(--primary-purple);
     text-align: center;
-    /* Body */
-    font-family: Manrope;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 16px; /* 114.286% */
 }
 
 #pagination button:hover{
